--- a/ru/messages.po
+++ b/ru/messages.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-10-29 13:03+0300\n"
+"POT-Creation-Date: 2014-10-29 13:04+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -210,7 +210,7 @@ msgstr "Какой код производит выход 123?"
 
 #: quiz/hello.lua:26
 msgid "Which Python code produces this output?"
-msgstr ""
+msgstr "Какой код на Python приведёт к такому результату?"
 
 #: views/all-tests.lua:64 views/all-tests.lua:66 views/all-tests.lua:73
 #: views/all-tests.lua:80
